[tool.poetry]
name = "minhhnh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
holidays = "^0.14.2"
ipykernel = "^6.15.1"
flatten-json = "^0.1.13"
notebook = "^6.4.12"
sklearn = "^0.0"
pandas-profiling = "^3.2.0"
ipywidgets = "^7.7.1"
prophet = "^1.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
